--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,13 @@
 	<artifactId>egovframework.rte.fdl.security</artifactId>
 	<version>3.9.0</version>
 	</dependency>
+		<!-- postgreSQL 모듈 추가 -->
+		<dependency>
+		     <groupId>org.postgresql</groupId>
+		     <artifactId>postgresql</artifactId>
+		     <version>42.2.5</version>
+		</dependency>
+		
 		
 	</dependencies>
 
